Были изменены 2 файла и добавлен 1
Добавлен файл InputOption.java, содержащий enum
В файле InputFunctions.java написана функция ввода с клавиатуры, на доработку отправлена функция ввода из файла
Функции из файла OutputFunctions.java перекинуты в файл MessageFunctions.java
В файле VerificationFunctions.java переписана функция getNumber, добавлена функция inputDataBad, остальные функции отправлены на доработку